--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     "serve": "php -S 0.0.0.0:8080 -t public public/index.php"
   },
   "require-dev": {
-    "zendframework/zend-developer-tools": "^1.1.0"
+    "zendframework/zend-developer-tools": "^1.1.0",
+    "san/san-session-toolbar": "^2.0.2"
   }
 }
